add swagger jwt security config